Fix lighthouse error Background and foreground colors do not have a sufficient contrast ratio.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ body {
   font-family: "poppinsregular", sans-serif;
 }
 
+.navbar {
+  font-weight: bold;
+}
+
 /* Hero style */
 .hero {
   height: 650px;
@@ -40,7 +44,6 @@ body {
 
 .about-img {
   width: 265px;
-  height: auto;
 }
 
 /* Ukuran Medium */
